Add room details using url and arguments

--- a/rooms/templates/partials/header.html
+++ b/rooms/templates/partials/header.html
@@ -1,5 +1,5 @@
  <header>
-     <a href="/">Easy Rental</a>
+     <a href="{% url "core:home" %}">Easy Rental</a>
      <ul>
          <li> <a href="#">Login</a></li>
      </ul>
