--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -6,8 +6,14 @@
     <title>{% block page_title %} {% endblock %} | Easy Rental</title>
 </head>
 <body>
-    {% include "partials/header.html" %}
-
+    <header>
+        {% include "partials/nav.html" %}
+        {% block search_bar %}
+            <form method="get" action="{% url "rooms:search" %}">
+                <input name="city" placeholder="Search By City">
+            </form>
+        {% endblock search_bar %}
+    <header>
     {% block content %}{% endblock %}
 
     {% include "partials/footer.html" %}
