Make github login

--- a/rooms/templates/users/login.html
+++ b/rooms/templates/users/login.html
@@ -9,7 +9,10 @@
 {% endblock search_bar %}
 
 {% block content %}
-    <form method="POST" action="{%url "users:login" %}">
+
+    {% include "partials/social_login.html" %}
+    
+    <form method="POST" action="{% url "users:login" %}">
         {% csrf_token %}
         {{form.as_p}}
         <Button>
