--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -7,15 +7,22 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %} {% endblock %} | Easy Rental</title>
 </head>
-<body>
-    <header>
-        {% include "partials/nav.html" %}
-        {% block search_bar %}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input name="city" placeholder="Search By City">
-            </form>
-        {% endblock search_bar %}
-    <header>
+<body class="text-gray-800">
+    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-blue-400">
+        <div class="flex items-center">
+            <a href="{% url "core:home" %}">
+                <img class="w-10 mr-6" src="{% static 'img/logo.png' %}" />
+            </a>
+            {% block search_bar %}
+                <form method="get" action="{% url "rooms:search" %}">
+                    <input class="border px-2 py-1 rounded-md border-blue-400 border-solid" name="city" placeholder="Where to go?">
+                </form>
+            {% endblock search_bar %}
+        </div>
+        <div>
+            {% include "partials/nav.html" %}
+        </div>
+    </header>
     {% block content %}{% endblock %}
 
     {% include "partials/footer.html" %}
