--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %} {% endblock %} | Easy Rental</title>
 </head>
-<body class="text-gray-800">
-    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-blue-400">
-        <div class="flex items-center">
+<body class="text-gray-800 mt-20">
+    <header class="container max-w-full flex top-0 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
+        <div class="flex items-center w-1/3">
             <a href="{% url "core:home" %}">
-                <img class="w-10 mr-6" src="{% static 'img/logo.png' %}" />
+                <img class="w-10 mr-6" src="{% static 'img/logo.png' %}"  />
             </a>
             {% block search_bar %}
-                <form method="get" action="{% url "rooms:search" %}">
-                    <input class="border px-2 py-1 rounded-md border-blue-400 border-solid" name="city" placeholder="Where to go?">
+                <form method="get" action="{% url "rooms:search" %}" class="w-full">
+                    <input class="search-box search-input border px-4 py-2 text-sm font-medium w-9/12 placeholder-gray-700 focus:outline-none rounded-md shadow-md hover:shadow-lg border-blue-400 border-solid" name="city" placeholder="Where to go?">
                 </form>
             {% endblock search_bar %}
         </div>
