--- a/rooms/templates/partials/nav.html
+++ b/rooms/templates/partials/nav.html
@@ -1,11 +1,8 @@
-<div>
-     <ul class="flex items-center text-sm font-medium">
-        {% if user.is_authenticated %}
-               <li class="ml-8"> <a href="{% url "users:logout" %}">Log out</a></li>
-        {% else %}
-               <li class="ml-8"> <a href="{% url "users:login" %}">Log in</a></li>
-               <li class="ml-8"> <a href="{% url "users:signup" %}">Sign up</a></li>
-        {% endif %}
-     
-     </ul>
-</div>
+<ul class="flex text-sm font-medium h-full">
+       {% if user.is_authenticated %}
+              <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center"> <a class = "px-5 py-6 " href="{% url "users:logout" %}">Log out</a></li>
+       {% else %}
+              <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center "> <a class = "px-5 py-6 " href="{% url "users:login" %}">Log in</a></li>
+              <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center "> <a class = "px-5 py-6 " href="{% url "users:signup" %}">Sign up</a></li>
+       {% endif %}
+</ul>
