--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -5,6 +5,12 @@
 {% endblock page_title %}
 
 {% block content %}
+
+    <div class="container m-auto rounded-xxl mt-32 mb-20 bg-blue-400 w-full h-50vh bg-cover bg-center" style="background-image:url()">
+
+    </div>
+
+
     {% for room in  rooms %}
         <h3>
             <a href="{% url "rooms:detail" room.pk %}">
