--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -5,29 +5,25 @@
 {% endblock page_title %}
 
 {% block content %}
+    <div class="container mx-auto">
+        <div class="-mx-20 rounded-xxl mt-24 mb-16 bg-blue-400 h-60vh bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)"></div>
+            <div class="-mx-20 flex flex-wrap">
+                {% for room in  rooms %}
+                     {% include "partials/room_card.html"  with room=room %}
+                {% endfor %}
+            </div>
+            <h5>
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% endif %}
+        
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}"> Next</a>
+            {% endif %}
+            </h5>
+        </div>
+    {% endblock content %}
 
-    <div class="container m-auto rounded-xxl mt-32 mb-20 bg-blue-400 w-full h-50vh bg-cover bg-center" style="background-image:url()">
 
-    </div>
-
-
-    {% for room in  rooms %}
-        <h3>
-            <a href="{% url "rooms:detail" room.pk %}">
-                {{ room.name }} / ${{ room.price }}
-            </a>
-        </h3>
-    {% endfor %}
-    
-    <h5>
-    {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-    {% endif %}
-
-    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-
-    {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}"> Next</a>
-    {% endif %}
-    </h5>
-{% endblock content %}
