--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -5,24 +5,28 @@
 {% endblock page_title %}
 
 {% block content %}
-    <div class="container mx-auto">
+    <div class="container mx-auto pb-10">
         <div class="-mx-20 rounded-xxl mt-24 mb-16 bg-blue-400 h-60vh bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)"></div>
-            <div class="-mx-20 flex flex-wrap">
+            <div class="-mx-20 flex flex-wrap mb-10">
                 {% for room in  rooms %}
                      {% include "partials/room_card.html"  with room=room %}
                 {% endfor %}
             </div>
-            <h5>
-            {% if page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-            {% endif %}
-        
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}"> Next</a>
-            {% endif %}
-            </h5>
+            <div class="flex items-center mx-auto justify-center">
+                {% if page_obj.has_previous %}
+                    <a href="?page={{ page_obj.previous_page_number }}" class="text-teal-400">
+                        <i class="fas fa-arrow-left fa-lg"></i>
+                    </a>
+                {% endif %}
+            
+                <span class="mx-3 font-medium text-lg">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+            
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}" class="text-teal-400">
+                        <i class="fas fa-arrow-right fa-lg"></i>
+                    </a>
+                {% endif %}
+            </div>
         </div>
     {% endblock content %}
 
