--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -9,7 +9,7 @@
         <div class="-mx-20 rounded-xxl mt-24 mb-16 bg-blue-400 h-60vh bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)"></div>
             <div class="-mx-20 flex flex-wrap mb-10">
                 {% for room in  rooms %}
-                     {% include "partials/room_card.html"  with room=room %}
+                     {% include "mixins/room_card.html"  with room=room %}
                 {% endfor %}
             </div>
             <div class="flex items-center mx-auto justify-center">
