--- a/rooms/templates/users/login.html
+++ b/rooms/templates/users/login.html
@@ -11,19 +11,15 @@
 {% block content %}
 
         <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center p-6 border border-blue-500 rounded-md">
+            
             {% include "partials/social_login.html" %}
-        <form method="POST" action="{% url "users:login" %}" class="w-full">
-            {% csrf_token %}
-            {{form.email}}
-            {{form.password}}
+
+            {% include 'mixins/auth/auth_form.html' with form=form call_to_action="Log in" %}
+
             <!-- <span><input type="email" placeholder="Email" class="text-left border-teal-500 px-5 focus:outline-none border-2 text-gray-700 mt-2 mb-4 rounded-md py-2 font-medium text-lg absolute"/><i class="relative mt-6 mr-0 fa fa-envelope"></i></span> -->
             <!-- <input type="password" placeholder="Password" class="text-left border-teal-500 w-full px-5 focus:outline-none border-2 text-gray-700 mt-2 mb-4 rounded-md py-2 font-medium text-lg"/> -->
-            <button class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white">
-                Login
-            </button>
-        </form>
 
-        <div class="mt-3">
+        <div class="mt-5">
             <span class="mr-2">Don't have an account?</span>
             <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign up</a>
         </div>
