--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %} {% endblock %} | Easy Rental</title>
 </head>
-<body class="text-gray-800 mt-20 ">
+<body class="text-gray-800 mt-20 font-light">
+    {% include 'partials/messages.html' %}
     <header class="container max-w-full flex top-0 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
         <div class="flex items-center w-1/3">
             <a href="{% url "core:home" %}">
@@ -25,7 +26,6 @@
         </div>
     </header>
     {% block content %}{% endblock %}
-
     {% include "partials/footer.html" %}
 </body>
 </html>
