--- a/rooms/templates/mixins/user_avatar.html
+++ b/rooms/templates/mixins/user_avatar.html
@@ -1,5 +1,5 @@
 {% if user_obj.avatar %}
-    <div class="h-32 w-32 bg-cover rounded-full" style="background-image: url({{user_obj.avatar.url}});">
+    <div class="h-32 w-32 bg-cover rounded-full bg-center" style="background-image: url({{user_obj.avatar.url}});">
 {% else %}
     <div class="h-32 w-32 bg-pink-500 rounded-full font-serif text-white flex justify-center items-center overflow-hidden">
         <span class="text-5xl">{{user_obj.first_name|first}}{{user_obj.last_name|first}}</span>
