--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -12,7 +12,7 @@
                      {% include "mixins/room_card.html"  with room=room %}
                 {% endfor %}
             </div>
-            <div class="flex items-center mx-auto justify-center">
+            <div class="flex items-center mx-auto justify-center container">
                 {% if page_obj.has_previous %}
                     <a href="?page={{ page_obj.previous_page_number }}" class="text-teal-400">
                         <i class="fas fa-arrow-left fa-lg"></i>
