Create change password form in profile section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,9 +2,26 @@
 
 @tailwind components;
 
-@tailwind utilities;
-
 .search-box{
     transition: box-shadow 0.2s linear;
 }
 
+input,
+textarea,
+select {
+    @apply w-full text-left border-teal-500 border-2 text-gray-700 m-auto mb-4 rounded-md font-light text-lg h-12;
+    &:focus {
+        @apply outline-none border-teal-500;
+    }
+}
+
+textarea{
+    resize: none;
+    height: 80px;
+}
+
+select{
+    height: 30px;
+}
+
+@tailwind utilities;
