--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -13,4 +13,35 @@
             {% endfor %}    
         </div>
     </div>
+
+    <div class="container mx-auto flex justify-around pb-56">
+        <div class="w-1/2">
+            <div class="flex justify-between">
+                <div>
+                    <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
+                    <span  class="text-gray-700 font-light">{{room.city}}</span>
+                </div>
+                <div class="flex flex-col items-center">
+                    <a href="{{room.host.get_absolute_url}}" class="flex flex-col items-center">
+                        {% if user_obj.avatar %}
+                            <div class="h-24 w-24 bg-cover rounded-full bg-center" style="background-image: url({{user_obj.avatar.url}});">
+                        {% else %}
+                            <div class="h-24 w-24 bg-pink-500 rounded-full font-serif text-white flex justify-center items-center overflow-hidden">
+                                <span class="text-3xl">{{room.host.first_name|first}}{{room.host.last_name|first}}</span>
+                        {% endif %}
+                            </div>
+                        <span class="mt-2 text-gray-500">{{room.host.first_name}}</span>
+                    </a>
+                </div>
+            </div>
+            <div class="flex">
+                {{room.room_type}}
+                {{room.get_guests}}
+                {{room.get_bedrooms}}
+                {{room.get_beds}}
+                {{room.get_baths}}
+            </div>
+        </div>
+        <div class="w-1/3"></div>
+    </div>
 {% endblock content %}
