--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -17,7 +17,7 @@
     <div class="container mx-auto flex justify-around pb-56">
         <div class="w-1/2">
             <div class="flex justify-between">
-                <div>
+                <div class="mb-5">
                     <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
                     <span  class="text-gray-700 font-light">{{room.city}}</span>
                 </div>
@@ -34,12 +34,41 @@
                     </a>
                 </div>
             </div>
-            <div class="flex">
-                {{room.room_type}}
-                {{room.get_guests}}
-                {{room.get_bedrooms}}
-                {{room.get_beds}}
-                {{room.get_baths}}
+            <div class="flex border-b border-gray-400 pb-5 mt-5">
+                <span class="mr-5 font-light">{{room.room_type}}</span>
+                <span class="mr-5 font-light">{{room.guests}} guest{{room.guests|pluralize}}</span>
+                <span class="mr-5 font-light">{{room.bedrooms}} bedroom{{room.bedrooms|pluralize}}</span>
+                <span class="mr-5 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
+                <span class="mr-5 font-light">{{room.baths}} bath{{room.baths|pluralize}}</span>
+            </div>
+            <p class="border-b border-gray-400 pb-5 mt-5">
+                {{room.description}}
+            </p>
+            <div class="border-b border-gray-400 pb-5 mt-5">
+                <h4 class="font-medium text-lg mb-5">Amenities</h4>
+                {% for amenity in room.amenities.all  %}
+                    <li class="mb-2">{{amenity}}</li>
+                {% endfor %} 
+            </div>
+
+            <div class="border-b border-gray-400 pb-5 mt-5">
+                <h4 class="font-medium text-lg mb-5">Facilities</h4>
+                {% for facility in room.facilities.all  %}
+                    <li class="mb-2">{{facility}}</li>
+                {% endfor %}     
+            </div>
+
+            <div class="border-b border-gray-400 pb-5 mt-5">
+                <h4 class="font-medium text-lg mb-5">House Rules</h4>
+                {% for house_rule in room.house_rules.all  %}
+                    <li class="mb-2">{{house_rule}}</li>
+                {% endfor %} 
+            </div>
+            <div class="border-b border-gray-400 pb-5 mt-5">
+                <h4 class="font-medium text-2xl mb-5">Reviews</h4>
+                <div>
+                    {{room.total_rating}} {{room.reviews.count}} review{{room.reviews.count|pluralize}}
+                </div>
             </div>
         </div>
         <div class="w-1/3"></div>
