--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %} {% endblock %} | Easy Rental</title>
 </head>
-<body class="text-gray-800 mt-20 font-light">
+<body class="text-gray-800 mt-20 font-sans">
     {% include 'partials/messages.html' %}
     <header class="container max-w-full flex top-0 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
         <div class="flex items-center w-1/3">
