--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -19,7 +19,7 @@
             <div class="flex justify-between">
                 <div class="mb-5">
                     <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
-                    <span  class="text-gray-700 font-light">{{room.city}}</span>
+                    <span  class="text-gray-600 font-normal">{{room.city}}</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <a href="{{room.host.get_absolute_url}}" class="flex flex-col items-center">
@@ -29,11 +29,11 @@
                 </div>
             </div>
             <div class="flex border-b border-gray-400 pb-5 mt-5">
-                <span class="mr-5 font-light">{{room.room_type}}</span>
-                <span class="mr-5 font-light">{{room.guests}} guest{{room.guests|pluralize}}</span>
-                <span class="mr-5 font-light">{{room.bedrooms}} bedroom{{room.bedrooms|pluralize}}</span>
-                <span class="mr-5 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
-                <span class="mr-5 font-light">{{room.baths}} bath{{room.baths|pluralize}}</span>
+                <span class="mr-5 font-normal">{{room.room_type}}</span>
+                <span class="mr-5 font-normal">{{room.guests}} guest{{room.guests|pluralize}}</span>
+                <span class="mr-5 font-normal">{{room.bedrooms}} bedroom{{room.bedrooms|pluralize}}</span>
+                <span class="mr-5 font-normal">{{room.beds}} bed{{room.beds|pluralize}}</span>
+                <span class="mr-5 font-normal">{{room.baths}} bath{{room.baths|pluralize}}</span>
             </div>
             <p class="border-b border-gray-400 pb-5 mt-5">
                 {{room.description}}
@@ -90,6 +90,11 @@
                 </div>
             </div>
         </div>
-        <div class="w-1/3"></div>
+        <div class="w-1/3">
+            
+            {% if room.host == user %}
+                <a href="{% url 'rooms:edit' room.pk %}" class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block">Edit Room</a>
+            {% endif %}     
+        </div>
     </div>
 {% endblock content %}
