--- a/rooms/templates/rooms/room_edit.html
+++ b/rooms/templates/rooms/room_edit.html
@@ -13,7 +13,7 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center p-6 border border-blue-500 rounded-md">
         {% include 'mixins/room/room_form.html' with form=form call_to_action="Update room" %}
         <div class="mt-5">
-                <a href="#" class="text-teal-500 font-medium">Edit Photos</a>
+                <a href="{% url 'rooms:photos' room.pk %}" class="text-teal-500 font-medium">Edit Photos</a>
         </div>
     </div>
 {% endblock content %}
