--- a/rooms/templates/rooms/room_photos.html
+++ b/rooms/templates/rooms/room_photos.html
@@ -11,7 +11,10 @@
 {% block content %}
 
     <div class="container mx-auto my-10 flex flex-col">
-        
+        <div class="my-10 w-full">
+            <a href="{% url 'rooms:add_photo' room.pk %}" class="text-center w-1/6 bg-purple-400 rounded-md py-2 mb-5 font-medium text-lg text-white block">Upload photo</a>
+        </div>
+
         {% for photo in room.photos.all %}
             <div class="mb-5 p-6 border border-blue-500 rounded-md flex justify-between shadow-md hover:shadow-lg">
                 <div class="flex items-start">
