--- a/rooms/templates/partials/nav.html
+++ b/rooms/templates/partials/nav.html
@@ -1,5 +1,14 @@
 <ul class="flex text-sm font-medium h-full">
        {% if user.is_authenticated %}
+              <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center"> 
+                     <a class = "px-5 py-6 " href="{% url 'users:switch_hosting' %}">
+                            {% if request.session.is_hosting %}
+                                   Stop hosting
+                            {% else %}
+                                   Start hosting
+                            {% endif %}         
+                     </a>
+              </li>       
               <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center"> <a class = "px-5 py-6 " href="{{user.get_absolute_url}}">Profile</a></li>
               <li class=" ml-8 border-b-2 border-white hover:border-blue-400 h-full flex items-center"> <a class = "px-5 py-6 " href="{% url "users:logout" %}">Log out</a></li>
        {% else %}
