--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,4 +24,11 @@ select{
     height: 30px;
 }
 
+.cal-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 10px;
+    justify-items: center;
+}
+
 @tailwind utilities;
