--- a/rooms/templates/mixins/room_card.html
+++ b/rooms/templates/mixins/room_card.html
@@ -1,6 +1,8 @@
 <div class="w-1/4 mb-10 px-2 overflow-hidden">
     <a href="{% url "rooms:detail" room.pk %}">
-        <div class="w-full h-64 rounded-lg mb-2 bg-cover bg-center" style="background-image: url({{room.first_photo}});"></div>            
+        <div class="w-full h-64 rounded-lg mb-2 overflow-hidden relative inline-block">
+            <div class="w-full h-64 rounded-lg bg-cover bg-center cursor-pointer" style="background-image: url({{room.first_photo}});"></div>            
+        </div>
         <div class="flex justify-between">
             <div class="w-4/5 overflow-hidden">
                 {% if room.host.superhost %}
