--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -90,10 +90,35 @@
                 </div>
             </div>
         </div>
-        <div class="w-1/3">
-            
+        <div class="w-1/4">
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block">Edit Room</a>
+            {% else %}
+                {% if not request.session.is_hosting %}
+                    {% for calendar in room.get_calendars %}
+                    <div class="mb-20">
+                        <span class="text-center font-medium text-lg block mb-2">{{calendar.get_month}} / {{calendar.year}}</span>
+                        <div class="cal-grid grid-cols-7 mb-4 font-semibold">
+                            {% for day in calendar.day_names %}
+                                <span>{{day}}</span>  
+                            {% endfor %}      
+                        </div>
+                        <div class="cal-grid grid-cols-7">
+                            {% for day in calendar.get_days %}
+                                {% if day.number != 0 %}
+                                    {% if day.past %}
+                                        <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-400">{{day}}</span>
+                                    {% else %}
+                                        <span class="bg-gray-200 w-full p-1 text-center rounded text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium cursor-pointer">{{day}}</span>
+                                    {% endif %}      
+                                {% else %}
+                                    <span></span>
+                                {% endif %}            
+                            {% endfor %}      
+                        </div>
+                    </div>
+                    {% endfor %}   
+                {% endif %}     
             {% endif %}     
         </div>
     </div>
