--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load is_booked %}
 {% block page_title %}
     {{ room.name }}
 {% endblock page_title %}
@@ -93,7 +93,7 @@
         <div class="w-1/4">
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block">Edit Room</a>
-            {% else %}
+                {% else %}
                 {% if not request.session.is_hosting %}
                     {% for calendar in room.get_calendars %}
                     <div class="mb-20">
@@ -105,9 +105,12 @@
                         </div>
                         <div class="cal-grid grid-cols-7">
                             {% for day in calendar.get_days %}
+                                {% is_booked room day as is_booked_bool %}
                                 {% if day.number != 0 %}
                                     {% if day.past %}
                                         <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-400">{{day}}</span>
+                                    {% elif is_booked_bool %}
+                                        <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-400 line-through">{{day}}</span>
                                     {% else %}
                                         <span class="bg-gray-200 w-full p-1 text-center rounded text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium cursor-pointer">{{day}}</span>
                                     {% endif %}      
