--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static i18n %}
+<!-- i18n for translation 18 represents character in between of i and n in internationalization -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +20,10 @@
                 <form method="get" action="{% url "rooms:search" %}" class="w-full flex -mt-1">
                     <i class="fa fa-search flex px-2 ml-0 mt-3 z-10"></i>
                     <div class="w-1/3 flex absolute">
-                        <input class="search-box -mt-1 -ml-1 border px-8 py-2 text-sm font-medium w-9/12 placeholder-gray-700 focus:outline-none rounded-md shadow-md hover:shadow-lg border-blue-400 border-solid" name="city" placeholder="Where to go?">
+                        <input 
+                        class="search-box -mt-1 -ml-1 border px-8 py-2 text-sm font-medium w-9/12 placeholder-gray-700 focus:outline-none rounded-md shadow-md hover:shadow-lg border-blue-400 border-solid" 
+                        name="city" 
+                        placeholder="{% trans 'Where to go?' %}">
                     </div>
                 </form>
             {% endblock search_bar %}
@@ -30,5 +34,13 @@
     </header>
     {% block content %}{% endblock %}
     {% include "partials/footer.html" %}
+    <script>
+        const langSelect = document.getElementById("js-lang");
+        const handleLangChange = () => {
+            const selected = langSelect.value;
+            fetch("{% url 'users:switch_language' %}?lang=${selected}").then(() => window.location.reload());
+        }
+        langSelect.addEventListener("change", handleLangChange)
+    </script>
 </body>
 </html>
