--- a/rooms/templates/partials/footer.html
+++ b/rooms/templates/partials/footer.html
@@ -1,3 +1,12 @@
+{% load i18n %}
 <footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
-    &copy; 2020 Easy Rental, Inc. All rights reserved
+    <div class="flex flex-col">
+        &copy; 2020 Easy Rental, Inc. {% trans 'All rights reserved' %}
+    </div>
+    <div class="flex mt-10">
+        <select class="w-1/5 h-8" id="js-lang">
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+        </select>
+    </div>
 </footer>
