--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body class="text-gray-800 mt-20 font-sans">
     {% include 'partials/messages.html' %}
-    <header class="container max-w-full flex top-0 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
+    <header class="container max-w-full flex top-0 z-10 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
         <div class="flex items-center w-1/3">
             <a href="{% url "core:home" %}">
                 <img class="w-10 mr-6" src="{% static 'img/logo.png' %}"  />
@@ -38,9 +38,9 @@
         const langSelect = document.getElementById("js-lang");
         const handleLangChange = () => {
             const selected = langSelect.value;
-            fetch("{% url 'users:switch_language' %}?lang=${selected}").then(() => window.location.reload());
+            fetch(`{% url 'users:switch_language' %}?lang=${selected}`).then(() => window.location.reload());
         }
-        langSelect.addEventListener("change", handleLangChange)
+        langSelect.addEventListener("change", handleLangChange);
     </script>
 </body>
 </html>
