--- a/rooms/templates/partials/footer.html
+++ b/rooms/templates/partials/footer.html
@@ -1,12 +1,13 @@
 {% load i18n %}
-<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
-    <div class="flex flex-col">
-        &copy; 2020 Easy Rental, Inc. {% trans 'All rights reserved' %}
+<footer class="container m-auto text-center py-10 border-t font-medium text-gray-500">
+    <div class="flex flex-col ">
+        <span>&copy; 2020 Easy Rental, Inc. {% trans 'All rights reserved' %}</span>
     </div>
     <div class="flex mt-10">
-        <select class="w-1/5 h-8" id="js-lang">
-            <option value="en">English</option>
-            <option value="es">Spanish</option>
+        {% get_current_language as LANGUAGE_CODE %}
+        <select class="w-1/12 h-8 -ml-16" id="js-lang">
+            <option value="en" {% if LANGUAGE_CODE == 'en' %} selected {% endif %}>English</option>
+            <option value="es" {% if LANGUAGE_CODE == 'es' %} selected {% endif %}>Spanish</option>
         </select>
     </div>
 </footer>
