--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load is_booked %}
+{% load is_booked on_favs %}
 {% block page_title %}
     {{ room.name }}
 {% endblock page_title %}
@@ -93,8 +93,14 @@
         <div class="w-1/4">
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block">Edit Room</a>
-                {% else %}
+            {% else %}
                 {% if not request.session.is_hosting %}
+                {% on_favs room as on_favs_boolean %}
+                {% if on_favs_boolean %}
+                    <a href="{% url 'lists:save-room' room.pk %}"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Remove from Favourites</a>
+                {% else %}
+                    <a href="{% url 'lists:save-room' room.pk %}"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Save to Favourites</a>
+                {% endif %}
                     {% for calendar in room.get_calendars %}
                     <div class="mb-20">
                         <span class="text-center font-medium text-lg block mb-2">{{calendar.get_month}} / {{calendar.year}}</span>
