--- a/rooms/templates/reservation/detail.html
+++ b/rooms/templates/reservation/detail.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="ml-5 flex flex-col">
                         <span class="font-medium mb-1">Contact your Easy Rental Host</span>
-                        <a href="#" class="text-teal-500 font-medium text-lg">Send a Message</a>
+                        <a href="{% url 'conversations:go' reservation.room.host.pk reservation.guest.pk %}" class="text-teal-500 font-medium text-lg">Send a Message</a>
                     </div>
                 </div>
                     
