Update the files before deployment

--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -10,8 +10,9 @@
         <div class="h-full w-1/2 flex flex-wrap">
             {% for photo in room.get_next_four_photos %}
                 <div style="background-image: url({{photo.file.url}});" class="w-1/2 h-auto bg-cover bg-center border border-gray-500"></div>
-            {% endfor %}    
+            {% endfor %}   
         </div>
+
     </div>
 
     <div class="container mx-auto flex justify-around pb-56">
@@ -97,9 +98,11 @@
                 {% if not request.session.is_hosting %}
                 {% on_favs room as on_favs_boolean %}
                 {% if on_favs_boolean %}
-                    <a href="{% url 'lists:toggle-room' room.pk %}?action=remove"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Remove from Favourites</a>
+                    <a href="{% url 'lists:toggle-room' room.pk %}?action=remove"><i class="fa fa-heart right-0 -mt-32 absolute text-4xl mr-3 text-red-600 "></i></a>
+                    <!-- <a href="{% url 'lists:toggle-room' room.pk %}?action=remove"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Remove from Favourites</a> -->
                 {% else %}
-                    <a href="{% url 'lists:toggle-room' room.pk %}?action=add"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Save to Favourites</a>
+                    <a href="{% url 'lists:toggle-room' room.pk %}?action=add"><i class="fa fa-heart right-0 -mt-32 absolute text-4xl mr-3 text-white "></i></a>
+                    <!-- <a href="{% url 'lists:toggle-room' room.pk %}?action=add"  class="text-center w-full bg-blue-400 rounded-md py-2 font-medium text-lg text-white block mb-10">Save to Favourites</a> -->
                 {% endif %}
                     {% for calendar in room.get_calendars %}
                     <div class="mb-20">
