--- a/rooms/templates/base.html
+++ b/rooms/templates/base.html
@@ -11,13 +11,14 @@
 </head>
 <body class="text-gray-800 mt-20 font-sans">
     {% include 'partials/messages.html' %}
-    <header class="container max-w-full flex top-0 z-10 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
-        <div class="flex items-center w-1/3">
+    <header class="container max-w-full flex top-0 z-20 items-center justify-between px-6 h-18 border-b border-blue-400 fixed bg-white">
+        <div class="flex items-center w-1/2">
             <a href="{% url "core:home" %}">
                 <img class="w-10 mr-6" src="{% static 'img/logo.png' %}"  />
             </a>
+            <a href="{% url "core:home" %}" class="w-1/2"><span class=" px-3 text-center font-medium text-blue-500 text-lg font-sans">Easy Rental</span></a>
             {% block search_bar %}
-                <form method="get" action="{% url "rooms:search" %}" class="w-full flex -mt-1">
+                <form method="get" action="{% url "rooms:search" %}" class="w-full flex -mt-1 -ml-32">
                     <i class="fa fa-search flex px-2 ml-0 mt-3 z-10"></i>
                     <div class="w-1/3 flex absolute">
                         <input 
