--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -7,8 +7,9 @@
 
 {% block content %}
     <div class="container mx-auto pb-10">
+        <span class="absolute mt-48 text-center ml-50vh z-10 py-2 text-white text-4xl font-serif">Find your Home away from Home</span>    
         <div class="-mx-20 rounded-xxl mt-24 mb-16 bg-blue-400 h-60vh bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80)"></div>
-            <div class="-mx-20 flex flex-wrap mb-10">
+        <div class="-mx-20 flex flex-wrap mb-10">
                 {% for room in  rooms %}
                      {% include "mixins/room_card.html"  with room=room %}
                 {% endfor %}
